# SOEM

./: .gitignore  CMakeLists.txt  README.md  goldentwittertest.cpp
soem/: ethercatmain.h
test/linux/: goldentwittertest.cpp
test/linux/cdr6_test/: CMakeLists.txt  cdr6_test.c
test/linux/dcsync_test/: CMakeLists.txt  data_proccess.c  dcsync_test.c
test/linux/dcsync_test/include/: data_handle.h
test/linux/elmo/: CMakeLists.txt  api.c  elmo.c  elmo_client.c
test/linux/elmo/include/: config.h  inter.h  pid.h
test/linux/ethercat_controller/: CMakeLists.txt  controller.c
test/linux/ethercat_controller/include/: alg.h  cia402.h  common.h  config.h  controller.h  ctr_log.h  ec_master.h  ec_slave.h  interface_shm.h  pid.h  safe_check.h  slave_ac58.h  slave_cdr6.h  slave_sbt908.h  traj_planner.h
test/linux/ethercat_interface/: CMakeLists.txt  ethercat_interface.c
test/linux/ethercat_interface/include/: data_handle.h  ethercat_interface.h  pid.h
test/linux/pid_interface/: CMakeLists.txt  inter_interface.c  load_data.c  load_data2.c  mems_client.c  mems_server.c  pid_interface.c  pid_test.c  random.c  welder_client.c
test/linux/pid_interface/include/: data_handle.h  inter.h  pid.h
test/linux/welder/: CMakeLists.txt  welder.c
test/linux/welder/include/: data_handle.h  inter.h  pid.h
